# etabs_api

./: .gitignore  README.md  analyze.py  area.py  check_update.py  clear_comtypes_cache.py  create_f2k.py  database.py  design.py  design_functions.py  diaphragm.py  etabs_obj.py  find_and_register_softwares.py  find_etabs.py  frame_obj.py  frame_obj_funcs.py  freecad_funcs.py  func.py  group.py  load_cases.py  load_combinations.py  load_patterns.py  material.py  pier.py  points.py  points_functions.py  prop_frame.py  pyproject.toml  python_functions.py  results.py  select_obj.py  shearwall.py  story.py  table_model.py  view.py
csi_safe/: safe.py
etabs_api_export/: export_plans_to_dxf.py
report/: all_report.py  beam_deflection_report.py  latex_str.py  strings.py
report/templates/: beam_deflections.docx
safe/: create_f2k.py
sections/: sections.py
test/: clean_test.py  pytest.ini  shayesteh.py  test_analyze.py  test_area.py  test_area_safe.py  test_create_f2k.py  test_database.py  test_database_safe.py  test_design.py  test_design_functions.py  test_diaphragm.py  test_etabs_obj.py  test_find_etabs.py  test_frame_obj.py  test_frame_obj_funcs.py  test_freecad_funcs.py  test_func.py  test_group.py  test_load_cases.py  test_load_combinations.py  test_load_combinations_without_etabs.py  test_load_patterns.py  test_material.py  test_pier.py  test_points.py  test_points_functions.py  test_prop_frame.py  test_python_functions.py  test_results.py  test_sections.py  test_select_obj.py  test_shearwall.py  test_story.py  test_view.py
test/etabs_api/: pytest.ini  (+14 more)
(+47 files in other folders)
